--- a/Poketest/app/build.gradle
+++ b/Poketest/app/build.gradle
@@ -45,5 +45,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.2.1'
     compile 'com.android.support:design:23.2.1'
     compile 'com.google.code.gson:gson:2.3.1'
-    compile 'com.facebook.fresco:fresco:0.10.0'
+    compile 'com.facebook.fresco:fresco:0.11.0'
+    compile 'com.facebook.fresco:animated-gif:0.11.0'
 }
