--- a/Poketest/app/src/main/AndroidManifest.xml
+++ b/Poketest/app/src/main/AndroidManifest.xml
@@ -13,13 +13,19 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/PokeTheme">
-        <activity android:name=".controller.home.ui.HomeActivity">
+        <activity
+            android:name=".controller.home.ui.HomeActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".controller.detail.DetailActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
